--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -1,4 +1,4 @@
-/* Aplicamos grid al contenedor, no al body */
+
 .contenedor {
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -8,14 +8,14 @@
 }
 .contenedor1{ 
   display: grid;
-  grid-template-columns: 1fr 1fr; /* Dos columnas iguales */
+  grid-template-columns: 1fr 1fr; 
  
 }
 h1{
     font-weight: 100;
 }
 
-/* Navegación con Flexbox */
+
 .menu ul {
   display: flex;
   gap: 2rem;
@@ -53,7 +53,7 @@ h1{
   }
 }
 
-/* Diseño general */
+
 body ,html {
   height: 100%;
  font-family: "Roboto", sans-serif;             
@@ -78,7 +78,7 @@ main {
   
 }
 
-/* Diseño en grid para las tarjetas */
+
 .tarjeta1 { 
   background-color: #ffffff;
   border: 1px solid hsl(224, 69%, 49%);
